--- a/trunk/Languages/default-ru.xml
+++ b/trunk/Languages/default-ru.xml
@@ -1886,7 +1886,7 @@
 		<text format="b">Эта загрузка в паузе</text>
 		<newline gap="8"/>
 		<text>Вы приостановили загрузку.  Если вы хотите возобновить загрузку, Вы можете
-		щелкнуть комманду</text><text format="b">Продолжить загрузку</text>
+		щелкнуть комманду </text><text format="b">Продолжить загрузку.</text>
 	</document>
 
 	<document name="DownloadHelp.DiskFull">
@@ -1911,7 +1911,7 @@
 		<newline gap="8"/>
 		<text>Эта загрузка в процессе.  Если загрузка идет слишком медленно,
 		Вы можете попробовать поискать в сетях больше источников файла с помощью
-		команды</text><text format="b">Найти больше источников</text><text>. Если скорость
+		команды </text><text format="b">Найти больше источников</text><text>. Если скорость
 		не увеличивается, то возможно она ограниченна пользователями у которых вы загружаете.
 		Но обычно скорость загрузки  увеличивается через какое-то время.</text>
 	</document>
@@ -1944,7 +1944,7 @@
 		новые источники во всех подключенных P2P сетях.  Один источник найдеся - и загрузка
 		начнется автоматически.  Shareaza ищет источники автоматически,
 		однако Вы можете ускорить процесс, используя команду</text>
-		<text format="b">Найти больше источников</text>
+		<text format="b"> Найти больше источников</text>
 		<newline gap="8"/>
 		<text>К сожалению во многих случаях может не быть пользовтелей, подключенных сейчас и
 		имеющих файл, котоый Вы ищите.  Можно ждать что кто то подключится, или  можно попытаться
@@ -2039,7 +2039,7 @@
 		не рекомендуем, так как для других людей файлы, содержащиеся в ней, не даст какой-нибудь пользы.</text>
 		<newline gap="8"/>
 		<text>Такие папки, как Windows, Program Files и подобные, обычно
-		не содержат     файлов, подходящих для разделения. Какие-нибудь имеющие интерес файлы
+		не содержат файлов, подходящих для разделения. Какие-нибудь имеющие интерес файлы
 		будут находиться</text><text format="i"> внутри</text><text> подкаталогах этих
 		папок. Разделяйте именно эти папки.</text>
 		<newline gap="8"/>
